<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.almostrealism</groupId>
	<artifactId>Rings</artifactId>
	<version>0.10</version>

	<!-- Output to jar format -->
	<packaging>jar</packaging>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>engine</source>
								<source>geometry</source>
								<source>shading</source>
								<source>ui</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>org.almostrealism</groupId>
			<artifactId>FlowTreeAPI</artifactId>
			<version>0.7</version>
		</dependency>

		<dependency>
			<groupId>io.almostrealism</groupId>
			<artifactId>TreeView</artifactId>
			<version>0.3</version>
		</dependency>

		<dependency>
			<groupId>io.almostrealism</groupId>
			<artifactId>GraphPersist</artifactId>
			<version>0.3</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-main</artifactId>
			<version>2.3.2</version>
		</dependency>
		
		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-main</artifactId>
			<version>2.3.2</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.joml</groupId>
			<artifactId>joml</artifactId>
			<version>1.9.9</version>
		</dependency>

	</dependencies>

	<distributionManagement>
		<repository>
			<id>internal</id>
			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>internal</id>
			<name>Archiva Managed Internal Repository</name>
			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>
</project>
